--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,270 +3,119 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SMARTCARGO BY MAY ROGA LLC - Compliance System</title>
+    <title>SMARTCARGO BY MAY ROGA LLC</title>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-
     <style>
-        :root {
-            --primary: #d8232a;
-            --secondary: #003366;
-            --accent: #f4f4f4;
-        }
-
-        body {
-            font-family: "Segoe UI", Roboto, sans-serif;
-            margin: 0;
-            background: var(--accent);
-            color: #333;
-        }
-
-        header {
-            background: var(--secondary);
-            color: white;
-            padding: 2rem;
-            text-align: center;
-            border-bottom: 5px solid var(--primary);
-        }
-
-        .container {
-            max-width: 1000px;
-            margin: 20px auto;
-            padding: 20px;
-            background: white;
-            border-radius: 8px;
-            box-shadow: 0 4px 15px rgba(0,0,0,0.1);
-        }
-
-        .section-title {
-            background: var(--secondary);
-            color: white;
-            padding: 12px;
-            margin-top: 20px;
-            border-radius: 4px;
-            cursor: pointer;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            font-weight: bold;
-        }
-
-        .panel {
-            display: none;
-            padding: 15px;
-            border: 1px solid #ddd;
-            border-top: none;
-        }
-
-        .question-row {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            gap: 15px;
-            padding: 12px 0;
-            border-bottom: 1px solid #eee;
-        }
-
-        .question-text {
-            flex: 2;
-            font-size: 14px;
-            font-weight: 500;
-        }
-
-        .info-btn {
-            background: #666;
-            color: white;
-            border: none;
-            border-radius: 50%;
-            width: 22px;
-            height: 22px;
-            cursor: pointer;
-            font-size: 12px;
-            font-weight: bold;
-        }
-
-        .info-btn:hover {
-            background: var(--primary);
-        }
-
-        .tip-box {
-            display: none;
-            background: #fff3cd;
-            padding: 10px;
-            margin: 10px 0;
-            border-left: 5px solid #ffeeba;
-            font-size: 13px;
-            color: #856404;
-        }
-
-        select {
-            padding: 8px;
-            border-radius: 4px;
-            border: 1px solid #ccc;
-            font-weight: bold;
-        }
-
-        .actions {
-            display: flex;
-            gap: 15px;
-            margin-top: 30px;
-        }
-
-        .btn {
-            flex: 1;
-            padding: 15px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            font-weight: bold;
-            text-transform: uppercase;
-        }
-
-        .btn-validate { background: var(--primary); color: white; }
-        .btn-clear { background: #555; color: white; }
-        .btn-print { background: var(--secondary); color: white; }
-
-        #resultContainer {
-            margin-top: 30px;
-            padding: 20px;
-            border-radius: 8px;
-            display: none;
-        }
-
-        .legal-footer {
-            margin-top: 40px;
-            text-align: center;
-            font-size: 12px;
-            color: #777;
-            border-top: 1px solid #ddd;
-            padding-top: 20px;
-        }
+        :root { --primary: #d8232a; --secondary: #003366; --accent: #f4f4f4; }
+        body { font-family: 'Segoe UI', sans-serif; margin: 0; background: var(--accent); }
+        header { background: var(--secondary); color: white; padding: 20px; text-align: center; border-bottom: 5px solid var(--primary); }
+        .container { max-width: 900px; margin: 20px auto; background: white; padding: 30px; border-radius: 12px; box-shadow: 0 5px 20px rgba(0,0,0,0.1); }
+        .question-card { border-bottom: 1px solid #eee; padding: 15px 0; display: flex; justify-content: space-between; align-items: center; }
+        .question-info { flex: 2; }
+        .question-desc { font-weight: bold; display: block; margin-bottom: 5px; }
+        .question-tip { font-size: 12px; color: #666; font-style: italic; }
+        select { padding: 10px; border-radius: 5px; border: 1px solid #ccc; font-weight: bold; }
+        .actions { display: flex; gap: 15px; margin-top: 30px; }
+        .btn { flex: 1; padding: 15px; border: none; border-radius: 8px; cursor: pointer; font-weight: bold; text-transform: uppercase; color: white; }
+        .btn-validate { background: var(--primary); }
+        .btn-clear { background: #555; }
+        #result { margin-top: 30px; padding: 20px; border-radius: 10px; display: none; }
     </style>
 </head>
-
 <body>
 
 <header>
     <h1>SMARTCARGO BY MAY ROGA LLC</h1>
-    <p>Professional Cargo Advisory & Compliance System</p>
+    <p>Asesoría Técnica Especializada en Carga Aérea (Avianca Cargo SOP)</p>
 </header>
 
 <div class="container">
-
-<form id="cargoForm">
-
-<!-- ================= DOCUMENTAL ================= -->
-<div class="section-title" onclick="togglePanel('p1')">I. CONTROL DOCUMENTAL <span>+</span></div>
-<div id="p1" class="panel">
-    <div class="question-row">
-        <span class="question-text">MAWB original legible + 3 copias</span>
-        <button type="button" class="info-btn" onclick="toggleTip('t1')">?</button>
-        <select name="q1">
-            <option value="ok">Cumple</option>
-            <option value="warn">Observación</option>
-            <option value="fail">Falla</option>
-        </select>
+    <div id="questions-container">
+        <p style="text-align:center;">Cargando estándares técnicos de Avianca...</p>
     </div>
-    <div id="t1" class="tip-box">Requerido para aceptación de carga y archivo.</div>
-</div>
 
-<!-- ================= SEGURIDAD ================= -->
-<div class="section-title" onclick="togglePanel('p2')">II. SEGURIDAD Y DIMENSIONES <span>+</span></div>
-<div id="p2" class="panel">
-    <div class="question-row">
-        <span class="question-text">Altura ≤ 80cm (PAX) o ≤ 160cm (Carguero)</span>
-        <button type="button" class="info-btn" onclick="toggleTip('t2')">?</button>
-        <select name="q7">
-            <option value="ok">Cumple</option>
-            <option value="warn">Observación</option>
-            <option value="fail">Falla</option>
-        </select>
+    <div id="result"></div>
+
+    <div class="actions">
+        <button class="btn btn-validate" onclick="processValidation()">Validar Cumplimiento</button>
+        <button class="btn btn-clear" onclick="location.reload()">Borrar Todo</button>
     </div>
-    <div id="t2" class="tip-box">Si excede, la carga no vuela.</div>
-</div>
-
-<!-- ================= DG / PHARMA ================= -->
-<div class="section-title" onclick="togglePanel('p3')">III. DG & CADENA DE FRÍO <span>+</span></div>
-<div id="p3" class="panel">
-    <div class="question-row">
-        <span class="question-text">Termógrafo activo entre 2°C y 8°C</span>
-        <button type="button" class="info-btn" onclick="toggleTip('t3')">?</button>
-        <select name="q13">
-            <option value="ok">Cumple</option>
-            <option value="warn">Observación</option>
-            <option value="fail">Falla</option>
-        </select>
-    </div>
-    <div id="t3" class="tip-box">Fuera de rango genera Claims.</div>
-</div>
-
-<div id="resultContainer"></div>
-
-<div class="actions">
-    <button type="button" class="btn btn-validate" onclick="processValidation()">Validar Compliance</button>
-    <button type="button" class="btn btn-clear" onclick="resetSystem()">Borrar</button>
-    <button type="button" class="btn btn-print" onclick="window.print()">PDF</button>
-</div>
-
-</form>
-
-<div class="legal-footer">
-    © 2026 SMARTCARGO BY MAY ROGA LLC · IATA · CBP · TSA · DOT
-</div>
-
 </div>
 
 <script>
-const API_BASE = "https://smartcargo-aipa.onrender.com";
+    // CAMBIAR POR TU URL DE RENDER
+    const API_BASE = "https://smartcargo-aipa.onrender.com";
 
-function togglePanel(id) {
-    const el = document.getElementById(id);
-    el.style.display = el.style.display === "block" ? "none" : "block";
-}
+    // Función para cargar preguntas desde el Models.py a través del API
+    async function loadQuestions() {
+        try {
+            const res = await axios.get(`${API_BASE}/questions`);
+            const container = document.getElementById('questions-container');
+            container.innerHTML = ""; // Limpiar mensaje de carga
 
-function toggleTip(id) {
-    const el = document.getElementById(id);
-    el.style.display = el.style.display === "block" ? "none" : "block";
-}
-
-async function processValidation() {
-    const formData = new FormData(document.getElementById("cargoForm"));
-    const answers = {};
-    formData.forEach((v, k) => answers[k] = v);
-
-    const operator = prompt("IDENTIFICACIÓN DEL OPERADOR:", "MAY_ROGA_TECH");
-
-    try {
-        const res = await axios.post(`${API_BASE}/validate`, {
-            answers: answers,
-            operator: operator
-        });
-
-        const d = res.data;
-        const box = document.getElementById("resultContainer");
-
-        box.style.display = "block";
-        box.style.background = d.red > 0 ? "#f8d7da" : d.yellow > 0 ? "#fff3cd" : "#d4edda";
-
-        box.innerHTML = `
-            <h2>${d.status}</h2>
-            <p><strong>Report ID:</strong> ${d.report_id}</p>
-            <ul>${d.recommendations.map(r => `<li>${r}</li>`).join("")}</ul>
-            <small>${d.legal_note}</small>
-        `;
-
-        box.scrollIntoView({behavior:"smooth"});
-
-    } catch (e) {
-        alert("Error de conexión con SMARTCARGO API");
+            res.data.forEach(q => {
+                container.innerHTML += `
+                    <div class="question-card">
+                        <div class="question-info">
+                            <span class="question-desc">${q.description}</span>
+                            <span class="question-tip">${q.tip} (${q.authority})</span>
+                        </div>
+                        <select id="${q.id}">
+                            <option value="ok">CUMPLE</option>
+                            <option value="warn">OBSERVACIÓN</option>
+                            <option value="fail">FALLA / RECHAZO</option>
+                        </select>
+                    </div>
+                `;
+            });
+        } catch (e) {
+            alert("Error: No se pudo conectar con el cerebro de SMARTCARGO en Render.");
+        }
     }
-}
 
-function resetSystem() {
-    if(confirm("¿Desea limpiar el formulario?")) {
-        document.getElementById("cargoForm").reset();
-        document.getElementById("resultContainer").style.display = "none";
+    async function processValidation() {
+        // Recoger respuestas dinámicamente
+        const selects = document.querySelectorAll('select');
+        const answers = {};
+        selects.forEach(s => { answers[s.id] = s.value; });
+
+        const operator = prompt("ID del Operador (Counter):", "USER_01");
+
+        try {
+            const res = await axios.post(`${API_BASE}/validate`, {
+                answers: answers,
+                operator: operator,
+                cargo_type: "General Cargo"
+            });
+
+            const d = res.data;
+            const resDiv = document.getElementById('result');
+            resDiv.style.display = "block";
+            
+            // Colores de autoridad
+            let bgColor = "#d4edda"; // Verde
+            if (d.status.includes("YELLOW")) bgColor = "#fff3cd"; // Amarillo
+            if (d.status.includes("RED")) bgColor = "#f8d7da"; // Rojo
+
+            resDiv.style.background = bgColor;
+            resDiv.innerHTML = `
+                <h2 style="margin-top:0;">${d.status}</h2>
+                <p><strong>REPORT ID:</strong> ${d.report_id}</p>
+                <hr>
+                <strong>RECOMENDACIONES TÉCNICAS:</strong>
+                <ul>${d.recommendations.map(r => `<li>${r}</li>`).join("")}</ul>
+                <br>
+                <small>${d.legal_note}</small>
+            `;
+            resDiv.scrollIntoView({behavior: "smooth"});
+
+        } catch (e) {
+            alert("Error al procesar la validación.");
+        }
     }
-}
+
+    // Iniciar carga al abrir
+    loadQuestions();
 </script>
 
 </body>
