--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,98 +2,204 @@
 <html lang="es">
 <head>
 <meta charset="UTF-8">
-<title>SMARTCARGO BY MAY ROGA LLC</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>SMARTCARGO - Validación de Carga</title>
+<link rel="stylesheet" href="/static/style.css">
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 <style>
-:root { --primary:#d8232a; --secondary:#003366; --accent:#f4f4f4; }
-body { font-family:'Segoe UI',sans-serif; margin:0; background:var(--accent);}
-header { background:var(--secondary); color:white; padding:20px; text-align:center; border-bottom:5px solid var(--primary);}
-.container { max-width:900px; margin:20px auto; background:white; padding:30px; border-radius:12px; box-shadow:0 5px 20px rgba(0,0,0,0.1);}
-.question-card { border-bottom:1px solid #eee; padding:15px 0; display:flex; justify-content:space-between; align-items:center;}
-.question-info { flex:2;}
-.question-desc { font-weight:bold; display:block; margin-bottom:5px; color:#333;}
-.question-tip { font-size:12px; color:#666; font-style:italic;}
-select { padding:10px; border-radius:5px; border:1px solid #ccc; font-weight:bold; cursor:pointer;}
-.actions { display:flex; gap:15px; margin-top:30px;}
-.btn { flex:1; padding:15px; border:none; border-radius:8px; cursor:pointer; font-weight:bold; text-transform:uppercase; color:white; transition:0.3s;}
-.btn-validate { background:var(--primary);}
-.btn-clear { background:#555;}
-.btn:hover { opacity:0.9; transform:translateY(-2px);}
-#result { margin-top:30px; padding:20px; border-radius:10px; display:none; border:2px solid #ccc;}
-.legal-note { font-size:11px; color:#777; margin-top:20px; text-align:center; border-top:1px solid #ddd; padding-top:10px;}
+    body {
+        font-family: Arial, sans-serif;
+        margin: 0;
+        background: #0d1b2a;
+        color: #e0e1dd;
+    }
+    header {
+        background: #1b263b;
+        padding: 1em;
+        text-align: center;
+        font-size: 1.8em;
+        font-weight: bold;
+        color: #f0f0f0;
+    }
+    main {
+        padding: 1em;
+        max-width: 1200px;
+        margin: auto;
+    }
+    select, input[type=text], button {
+        padding: 0.5em;
+        margin: 0.5em 0;
+        font-size: 1em;
+    }
+    .question {
+        background: #162447;
+        margin: 0.5em 0;
+        padding: 0.7em;
+        border-radius: 6px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    .question:hover {
+        background: #1f4068;
+    }
+    .tooltip {
+        font-size: 0.8em;
+        color: #a0a0a0;
+        margin-left: 1em;
+    }
+    .alert {
+        padding: 0.3em 0.6em;
+        border-radius: 4px;
+        color: white;
+        font-weight: bold;
+    }
+    .green { background: #3fc1c9; }
+    .yellow { background: #f5cb5c; color: #000; }
+    .red { background: #ee6c4d; }
+    .btn-container {
+        margin-top: 1em;
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+    }
+    button {
+        cursor: pointer;
+        border: none;
+        border-radius: 6px;
+        background: #3fc1c9;
+        color: #000;
+        font-weight: bold;
+        transition: 0.3s;
+    }
+    button:hover {
+        background: #2aa198;
+    }
+    #report {
+        margin-top: 2em;
+        background: #1b263b;
+        padding: 1em;
+        border-radius: 8px;
+        white-space: pre-wrap;
+    }
 </style>
 </head>
 <body>
-<header>
-<h1>SMARTCARGO BY MAY ROGA LLC</h1>
-<p>Asesoría Técnica Especializada (IATA / CBP / TSA / DOT)</p>
-</header>
 
-<div class="container">
-<div id="questions-container"><p style="text-align:center;">Cargando estándares técnicos...</p></div>
-<div id="result"></div>
-<div class="actions">
-<button class="btn btn-validate" onclick="processValidation()">Validar Cumplimiento</button>
-<button class="btn btn-clear" onclick="location.reload()">Borrar Todo</button>
-</div>
-<div class="legal-note">© 2026 SMARTCARGO BY MAY ROGA LLC. Todos los derechos reservados.</div>
-</div>
+<header>SMARTCARGO - Validación de Carga Avianca</header>
+
+<main>
+    <label for="cargoType">Seleccione tipo de carga:</label>
+    <select id="cargoType">
+        <option value="GENERAL">General</option>
+        <option value="DG">Peligrosa (DG)</option>
+        <option value="PERISHABLE">Perecedera</option>
+        <option value="LIVE_ANIMALS">Animales vivos</option>
+        <option value="EXPRESS">Express</option>
+        <option value="COMAT">COMAT</option>
+    </select>
+
+    <div id="questionsContainer"></div>
+
+    <div class="btn-container">
+        <button onclick="submitAnswers()">Generar Reporte</button>
+        <button onclick="resetForm()">Limpiar Formulario</button>
+        <button onclick="changeLanguage()">Cambiar Idioma / Language</button>
+    </div>
+
+    <div id="report"></div>
+</main>
 
 <script>
-const API_BASE = window.location.origin;
+let currentLanguage = 'es';
+let allQuestions = [];
 
 async function loadQuestions() {
+    const cargoType = document.getElementById('cargoType').value;
     try {
-        const res = await axios.get(`${API_BASE}/questions`);
-        const container = document.getElementById('questions-container');
-        container.innerHTML = "";
-        res.data.forEach(q => {
-            container.innerHTML += `<div class="question-card">
-                <div class="question-info">
-                    <span class="question-desc">${q.description}</span>
-                    <span class="question-tip">${q.tip} (${q.authority})</span>
-                </div>
-                <select id="${q.id}">
-                    <option value="ok">CUMPLE</option>
-                    <option value="warn">OBSERVACIÓN</option>
-                    <option value="fail">RECHAZO</option>
+        const res = await axios.get(`/get_questions/${cargoType}`);
+        allQuestions = res.data;
+        renderQuestions();
+    } catch (err) {
+        console.error("Error cargando preguntas:", err);
+    }
+}
+
+function renderQuestions() {
+    const container = document.getElementById('questionsContainer');
+    container.innerHTML = '';
+    allQuestions.forEach(q => {
+        const div = document.createElement('div');
+        div.classList.add('question');
+        div.innerHTML = `
+            <span>${q.description}</span>
+            <div>
+                <select data-id="${q.id}">
+                    <option value="GREEN">Apto</option>
+                    <option value="YELLOW">Observación</option>
+                    <option value="RED">Rechazo</option>
                 </select>
-            </div>`;
-        });
-    } catch (e) { alert("Error de conexión con el sistema central."); }
+                <span class="tooltip">${q.tip} (${q.authority})</span>
+            </div>
+        `;
+        container.appendChild(div);
+    });
 }
 
-async function processValidation() {
-    const selects = document.querySelectorAll('select');
+async function submitAnswers() {
     const answers = {};
-    selects.forEach(s => answers[s.id]=s.value);
-    const operator = prompt("ID del Operador:", "COUNTER_AV");
-
+    document.querySelectorAll('#questionsContainer select').forEach(sel => {
+        answers[sel.dataset.id] = sel.value;
+    });
     try {
-        const res = await axios.post(`${API_BASE}/validate`, {
-            answers, operator, cargo_type:"General Cargo"
-        });
-        const d = res.data;
-        const resDiv = document.getElementById('result');
-        resDiv.style.display="block";
-        resDiv.style.background=d.red>0?"#f8d7da":d.yellow>0?"#fff3cd":"#d4edda";
-        resDiv.innerHTML=`
-            <h2>${d.status}</h2>
-            <p><strong>REPORT ID:</strong> ${d.report_id} | <strong>OPERADOR:</strong> ${d.operator}</p>
-            <hr>
-            <strong>RECOMENDACIONES:</strong>
-            <ul>${d.recommendations.map(r=>`<li>${r}</li>`).join("")}</ul>
-            <hr>
-            <h4>Ganancia Protegida</h4>
-            <p>Peso Declarado: ${d.chargeable_weight} kg</p>
-            <p>Peso Verificado SmartCargo: ${d.verified_weight} kg</p>
-            <p>Ajuste Sugerido: ${d.weight_adjustment} kg</p>
-            <p style="font-size:11px;font-style:italic;">${d.legal_note}</p>`;
-        resDiv.scrollIntoView({behavior:"smooth"});
-    } catch (e) { alert("Error al procesar validación técnica."); }
+        const cargoType = document.getElementById('cargoType').value;
+        const res = await axios.post('/validate_cargo', { cargo_type: cargoType, answers: answers });
+        displayReport(res.data);
+    } catch (err) {
+        console.error("Error generando reporte:", err);
+    }
 }
 
+function displayReport(data) {
+    const reportDiv = document.getElementById('report');
+    reportDiv.innerHTML = `
+        Reporte ID: ${data.report_id}
+        Fecha: ${data.timestamp}
+        Operador: ${data.operator}
+        Tipo de carga: ${data.cargo_type}
+        Total preguntas: ${data.total_questions}
+        ✅ Apto: ${data.green}
+        ⚠️ Observación: ${data.yellow}
+        ❌ Rechazo: ${data.red}
+        Estado general: ${data.status}
+        
+Recomendaciones:
+${data.recommendations.join('\n')}
+
+Nota Legal:
+${data.legal_note}
+    `;
+}
+
+function resetForm() {
+    loadQuestions();
+    document.getElementById('report').innerHTML = '';
+}
+
+function changeLanguage() {
+    if (currentLanguage === 'es') {
+        currentLanguage = 'en';
+        alert("Language switched to English");
+    } else {
+        currentLanguage = 'es';
+        alert("Idioma cambiado a Español");
+    }
+}
+
+// Inicializar preguntas al cargar la página
+document.getElementById('cargoType').addEventListener('change', loadQuestions);
 loadQuestions();
 </script>
+
 </body>
 </html>
